efishiery/logs/efishiery_nomor_satu/create_table/2022-09-04T00:00:00+00:00/7.log
[2022-09-05 11:17:25,993] {taskinstance.py:851} INFO - Dependencies all met for <TaskInstance: efishiery_nomor_satu.create_table 2022-09-04T00:00:00+00:00 [queued]>
[2022-09-05 11:17:26,063] {taskinstance.py:851} INFO - Dependencies all met for <TaskInstance: efishiery_nomor_satu.create_table 2022-09-04T00:00:00+00:00 [queued]>
[2022-09-05 11:17:26,064] {taskinstance.py:1042} INFO - 
--------------------------------------------------------------------------------
[2022-09-05 11:17:26,064] {taskinstance.py:1043} INFO - Starting attempt 7 of 8
[2022-09-05 11:17:26,065] {taskinstance.py:1044} INFO - 
--------------------------------------------------------------------------------
[2022-09-05 11:17:26,126] {taskinstance.py:1063} INFO - Executing <Task(PythonOperator): create_table> on 2022-09-04T00:00:00+00:00
[2022-09-05 11:17:26,146] {standard_task_runner.py:52} INFO - Started process 10185 to run task
[2022-09-05 11:17:26,151] {standard_task_runner.py:76} INFO - Running: ['airflow', 'tasks', 'run', 'efishiery_nomor_satu', 'create_table', '2022-09-04T00:00:00+00:00', '--job-id', '159', '--pool', 'default_pool', '--raw', '--subdir', 'DAGS_FOLDER/soal_nomor_satu.py', '--cfg-path', '/tmp/tmp525ga8tv', '--error-file', '/tmp/tmpv3vi12hs']
[2022-09-05 11:17:26,155] {standard_task_runner.py:77} INFO - Job 159: Subtask create_table
[2022-09-05 11:17:26,258] {logging_mixin.py:104} INFO - Running <TaskInstance: efishiery_nomor_satu.create_table 2022-09-04T00:00:00+00:00 [running]> on host 2b8e628fc16c
[2022-09-05 11:17:26,347] {taskinstance.py:1257} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=farah
AIRFLOW_CTX_DAG_ID=efishiery_nomor_satu
AIRFLOW_CTX_TASK_ID=create_table
AIRFLOW_CTX_EXECUTION_DATE=2022-09-04T00:00:00+00:00
AIRFLOW_CTX_DAG_RUN_ID=scheduled__2022-09-04T00:00:00+00:00
[2022-09-05 11:17:26,374] {base.py:74} INFO - Using connection to: id: efishery. Host: 172.17.0.1, Port: 5432, Schema: efishery, Login: airflow, Password: XXXXXXXX, extra: None
[2022-09-05 11:17:26,401] {base.py:74} INFO - Using connection to: id: efishery_dwh. Host: 172.17.0.1, Port: 5432, Schema: efishery_dwh, Login: airflow, Password: XXXXXXXX, extra: None
[2022-09-05 11:17:26,429] {base.py:74} INFO - Using connection to: id: efishery_dwh. Host: 172.17.0.1, Port: 5432, Schema: efishery_dwh, Login: airflow, Password: XXXXXXXX, extra: None
[2022-09-05 11:17:26,438] {taskinstance.py:1455} ERROR - syntax error at or near "+"
LINE 3:             + (`" + cols + "`) VALUES (" + "3923," * (len(ro...
                    ^
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.6/site-packages/airflow/models/taskinstance.py", line 1112, in _run_raw_task
    self._prepare_and_execute_task_with_callbacks(context, task)
  File "/home/airflow/.local/lib/python3.6/site-packages/airflow/models/taskinstance.py", line 1285, in _prepare_and_execute_task_with_callbacks
    result = self._execute_task(context, task_copy)
  File "/home/airflow/.local/lib/python3.6/site-packages/airflow/models/taskinstance.py", line 1315, in _execute_task
    result = task_copy.execute(context=context)
  File "/home/airflow/.local/lib/python3.6/site-packages/airflow/operators/python.py", line 117, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.6/site-packages/airflow/operators/python.py", line 128, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/usecase/soal_nomor_satu.py", line 9, in main
    insert_dwh_table(df)
  File "/opt/airflow/dags/usecase/soal_nomor_satu.py", line 54, in insert_dwh_table
    cursor.execute(sql, tuple(row))
psycopg2.errors.SyntaxError: syntax error at or near "+"
LINE 3:             + (`" + cols + "`) VALUES (" + "3923," * (len(ro...
                    ^

[2022-09-05 11:17:26,446] {taskinstance.py:1503} INFO - Marking task as UP_FOR_RETRY. dag_id=efishiery_nomor_satu, task_id=create_table, execution_date=20220904T000000, start_date=20220905T111725, end_date=20220905T111726
[2022-09-05 11:17:26,608] {local_task_job.py:146} INFO - Task exited with return code 1
[2022-09-05 11:35:54,924] {taskinstance.py:851} INFO - Dependencies all met for <TaskInstance: efishiery_nomor_satu.create_table 2022-09-04T00:00:00+00:00 [queued]>
[2022-09-05 11:35:55,016] {taskinstance.py:851} INFO - Dependencies all met for <TaskInstance: efishiery_nomor_satu.create_table 2022-09-04T00:00:00+00:00 [queued]>
[2022-09-05 11:35:55,017] {taskinstance.py:1042} INFO - 
--------------------------------------------------------------------------------
[2022-09-05 11:35:55,017] {taskinstance.py:1043} INFO - Starting attempt 7 of 8
[2022-09-05 11:35:55,018] {taskinstance.py:1044} INFO - 
--------------------------------------------------------------------------------
[2022-09-05 11:35:55,084] {taskinstance.py:1063} INFO - Executing <Task(PythonOperator): create_table> on 2022-09-04T00:00:00+00:00
[2022-09-05 11:35:55,090] {standard_task_runner.py:52} INFO - Started process 10747 to run task
[2022-09-05 11:35:55,096] {standard_task_runner.py:76} INFO - Running: ['airflow', 'tasks', 'run', 'efishiery_nomor_satu', 'create_table', '2022-09-04T00:00:00+00:00', '--job-id', '167', '--pool', 'default_pool', '--raw', '--subdir', 'DAGS_FOLDER/soal_nomor_satu.py', '--cfg-path', '/tmp/tmpxn6myp1l', '--error-file', '/tmp/tmpxjqotw4u']
[2022-09-05 11:35:55,100] {standard_task_runner.py:77} INFO - Job 167: Subtask create_table
[2022-09-05 11:35:55,270] {logging_mixin.py:104} INFO - Running <TaskInstance: efishiery_nomor_satu.create_table 2022-09-04T00:00:00+00:00 [running]> on host 2b8e628fc16c
[2022-09-05 11:35:55,342] {taskinstance.py:1257} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=farah
AIRFLOW_CTX_DAG_ID=efishiery_nomor_satu
AIRFLOW_CTX_TASK_ID=create_table
AIRFLOW_CTX_EXECUTION_DATE=2022-09-04T00:00:00+00:00
AIRFLOW_CTX_DAG_RUN_ID=scheduled__2022-09-04T00:00:00+00:00
[2022-09-05 11:35:55,357] {base.py:74} INFO - Using connection to: id: efishery. Host: 172.17.0.1, Port: 5432, Schema: efishery, Login: airflow, Password: XXXXXXXX, extra: None
[2022-09-05 11:35:55,381] {base.py:74} INFO - Using connection to: id: efishery_dwh. Host: 172.17.0.1, Port: 5432, Schema: efishery_dwh, Login: airflow, Password: XXXXXXXX, extra: None
[2022-09-05 11:35:55,407] {base.py:74} INFO - Using connection to: id: efishery_dwh. Host: 172.17.0.1, Port: 5432, Schema: efishery_dwh, Login: airflow, Password: XXXXXXXX, extra: None
[2022-09-05 11:35:55,440] {logging_mixin.py:104} INFO - sukses
[2022-09-05 11:35:55,441] {python.py:118} INFO - Done. Returned value was: None
[2022-09-05 11:35:55,477] {taskinstance.py:1166} INFO - Marking task as SUCCESS. dag_id=efishiery_nomor_satu, task_id=create_table, execution_date=20220904T000000, start_date=20220905T113554, end_date=20220905T113555
[2022-09-05 11:35:55,560] {taskinstance.py:1220} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2022-09-05 11:35:55,589] {local_task_job.py:146} INFO - Task exited with return code 0
